Added logic for self_register_allowed, info_page_url, register screens Changed rrss icons style
gradle updated
targetSdkVersion updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -366,4 +366,5 @@
 
     <string name="fediverse">Fediverso</string>
     <string name="social_networks">Redes sociales</string>
+    <string name="social_market">Mercado Social: %s</string>
 </resources>
