--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,7 +340,7 @@
     <string name="benefit_in_person">Descuento en persona</string>
     <string name="benefit_online">Descuento online</string>
     <string name="benefits_not_for_intercoop">Descuento no disponible para socias de intercooperación</string>
-    <string name="benefit_request_email_subject">Solicitud de descuento Mercado Social de Madrid. Número de socia: %s</string>
+    <string name="benefit_request_email_subject">Solicitud de descuento Mercado Social. Número de socia: %s</string>
     <string name="benefit_code_x">Código de descuento: %s</string>
     <string name="member_number">Número de socia: %s</string>
     <string name="member_intercoop">Socia intercooperación</string>
@@ -348,7 +348,7 @@
     <string name="member_entity">Socia proveedora</string>
     <string name="inactive">INACTIVA</string>
     <string name="active">ACTIVA</string>
-    <string name="member_card_intro_message">Este carnet certifica tu pertenencia como socia/o al Mercado Social de Madrid. Con él podrás acceder a las ventajas y descuentos por formar parte de la red. ¡Muchas gracias por tu aportación a la Economía Solidaria madrileña!</string>
+    <string name="member_card_intro_message">Este carnet certifica tu pertenencia como socia/o al Mercado Social. Con él podrás acceder a las ventajas y descuentos por formar parte de la red. ¡Muchas gracias por tu aportación a la Economía Solidaria!</string>
     <string name="currently_inactive_member">Socia INACTIVA</string>
     <string name="new_payment_only_active">Las socias inactivas no pueden enviar pagos</string>
     <string name="enter_member_id">Introduce número de socia</string>
