--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <resources>
     <string name="app_name">Merkatu Soziala</string>
-
-    <string name="entities">Hornitzaileak</string>
-
+    <string name="entities">Entitateak</string>
     <string name="open">Ireki</string>
-    <string name="register">Erregistratu</string>
+    <string name="register">Izena eman</string>
     <string name="enter">Sartu</string>
     <string name="map_list">Mapa - Zerrenda</string>
     <string name="the_social_market">Merkatu Soziala</string>
     <string name="search">Bilatu</string>
-    <string name="remember_password">Pasahitza\ngogoratu</string>
-    <string name="entity">Erakundea</string>
-    <string name="entity_offers">Erakundearen eskaintzak</string>
-
-    <string name="start">Hasi gaitezen?</string>
+    <string name="remember_password">Pasahitza gogoratu</string>
+    <string name="entity">Entitatea</string>
+    <string name="entity_offers">Entitatearen eskaintzak</string>
+    <string name="start">Hasten gara?</string>
     <string name="go_to_entities_list">Hasi!</string>
     <string name="permission_denied">Baimena ukatua</string>
     <string name="need_access_camera_scan_qr">Zure mugikorraren kamerara sartzeko baimena behar da kodea eskaneatzeko</string>
-    <string name="need_access_camera_profile_photo">Zure mugikorraren kamerara sartzeko baimena behar da profilaren argazkia ateratzeko. Ez da beharrezkoa telefonoaren memoriatik irudia aukeratuko baduzu</string>
+    <string name="need_access_camera_profile_photo">Zure mugikorraren kamerara sartzeko baimena behar da profilaren argazkia ateratzeko. Ez da beharrezkoa telefonoaren memoriatik irudia aukeratzen baduzu</string>
     <string name="qr_code_scan">QR kodea eskaneatu</string>
     <string name="go_ahead">Aurrera</string>
     <string name="welcome">Ongietorri!</string>
-    <string name="entity_info">Erakundearen informazioa</string>
+    <string name="entity_info">Entitatearen informazioa</string>
     <string name="email">Emaila</string>
     <string name="invalid_email">Email baliogabea</string>
-    <string name="not_account_yet_register">Ez duzu konturik?\nErregistratu zaitez!</string>
+    <string name="not_account_yet_register">Ez duzu konturik?\nEman izena!</string>
     <string name="offer">Eskaintza</string>
     <string name="new_offer">Eskaintza berria</string>
     <string name="new_offer_by">Eskaintza berria %s(e)tik</string>
     <string name="news_mes">MESen albistea</string>
-
-    <string name="search_entities">Erakundeak bilatu</string>
+    <string name="search_entities">Entitateak bilatu</string>
     <string name="mes_news">MESen albistea</string>
     <string name="mes_news_message_format"><![CDATA[
             <b>%s</b><p>
@@ -43,14 +38,11 @@
     <string name="see_more">Gehiago ikusi</string>
     <string name="invalid_link">Esteka baliogabea da</string>
     <string name="account">Kontua</string>
-    <string name="no_offers_right_now">Une honetan erakunde honek ez du eskaintza aktiborik</string>
-
+    <string name="no_offers_right_now">Une honetan entitate honek ez du eskaintza aktiborik</string>
     <string name="password">Pasahitza</string>
     <string name="check">Egiaztatu</string>
-
     <string name="contact">Kontaktua</string>
     <string name="web">Webgunea</string>
-
     <string name="email_contact_subject">Android aplikaziotik kontaktua</string>
     <string name="already_have_account">Dagoeneko kontua dut</string>
     <string name="dont_have_account">Ez dut konturik</string>
@@ -61,23 +53,20 @@
     <string name="error_in">Errorea %s(e)n:</string>
     <string name="access_data_incorrect">Sarbide datuak okerrak dira</string>
     <string name="info">Informazioa</string>
-
     <string name="channel_name">Jakinarazpen orokorrak</string>
     <string name="channel_description">Aplikazioaren ohar generikoak</string>
-
-    <string name="select_mes">Hautatu Merkatu Soziala</string>
-    <string name="change_social_market">Aldatu Merkatu Soziala</string>
-    <string name="change_social_market_warning">Kontuan izan zure erabiltzailearekin saioa hasita baduzu, Merkatu Soziala aldatzean saioa itxiko dela</string>
-
+    <string name="select_mes">Merkatu Soziala Hautatu</string>
+    <string name="change_social_market">Merkatu Soziala Aldatu</string>
+    <string name="change_social_market_warning">Zure erabiltzailearekin saioa hasi baduzu, Merkatu Soziala aldatzerakoan saioa itxiko dela kontuan izan.</string>
     <string name="categories">Kategoriak</string>
-    <string name="only_favs">Bakarrik gogokoak</string>
+    <string name="only_favs">Gogokoenak bakarrik</string>
     <string name="apply_filters">Iragazkiak aplikatu</string>
     <string name="go_to_profile">Nire profila</string>
     <string name="profile_saved">Profila gordeta</string>
     <string name="saving">Gordetzen...</string>
     <string name="select_profile">Hautatu zure profila</string>
     <string name="new_register">Erregistro berria</string>
-    <string name="block_text">Aplikazio hau birrediseinu prozesuan dago.\n\nHelburua kontsumo arduratsua sustatzea da Merkatu Sozialeko enpresetan eta erakundeetan.\n\nSakatu hemen informazio gehiago lortzeko</string>
+    <string name="block_text">Aplikazio hau birrediseinu prozesuan dago.\n\nHelburua kontsumo arduratsua sustatzea da Merkatu Sozialeko enpresetan eta entitateetan.\n\nSakatu hemen informazio gehiago lortzeko</string>
     <string name="test_code">Probako kodea</string>
     <string name="enter_test_code">Probako ingurura sartzeko kodea baduzu, sartu hemen:</string>
     <string name="invalid_code">Kode baliogabea</string>
@@ -87,33 +76,33 @@
     <string name="invitation_sent">Gonbidapena bidali da. Eskerrik asko!</string>
     <string name="sending">Bidaltzen</string>
     <string name="mes_format">Merkatua: %s</string>
-    <string name="guest_account_info_format">Gonbidatuaren kontua.\nBaliozkoa arte: %s</string>
+    <string name="guest_account_info_format">Kontu gonbidatua.\nbalioduna %s arte</string>
     <string name="customer">Kontsumitzailea</string>
-    <string name="invitation_code_text_short">Sartu "consumeconsciente" kodea doan sarien sistema probatzeko</string>
+    <string name="invitation_code_text_short">Sar ezazu \"consumeconsciente\" kodea hobari etikoen sistema doan frogatzeko</string>
     <string name="open_link">Esteka ireki</string>
     <string name="web_link_dialog_message">Hurrengo esteka %s ez da aplikazio honetarako ordainketa esteka baliogarria. Saiatu zure mugikorreko arakatzailean irekitzen.</string>
     <string name="understood">Ulertuta</string>
     <string name="highlighted">Nabarmenduak</string>
-    <string name="empty_state_text_entities">Ez da irizpide horiekin erakunderik aurkitu...</string>
+    <string name="empty_state_text_entities">Ez da irizpide horiekin entitaterik aurkitu...</string>
     <string name="type">Mota</string>
     <string name="market">Merkatua</string>
     <string name="consumer">Kontsumitzailea</string>
     <string name="published">Argitaratua: %s</string>
-    <string name="valid_until">Baliozkoa arte: %s</string>
-    <string name="no_app_to_open_link">Esteka hau irekitzeko aplikaziorik ez da aurkitu.</string>
-    <string name="no_novelties">Oraingoz ez dago albiste eta eskaintzarik.\nLaster lehenengoa abiaraziko dugu!</string>
+    <string name="valid_until">Baliozkoa %s arte:</string>
+    <string name="no_app_to_open_link">Ez dago aplikaziorik esteka hau irekitzeko.</string>
+    <string name="no_novelties">Oraingoz ez daude albiste edo eskaintzarik.\nLaster lehenengoa abiaraziko dugu!</string>
     <string name="member_card">Bazkide txartela</string>
-    <string name="focus_qr_code_member">Fokatu bazkidearen QR kodea</string>
+    <string name="focus_qr_code_member">Bazkidearen QR kodea fokatu</string>
     <string name="checking_member">Bazkidea egiaztatzen: %s</string>
     <string name="register_to_use_member_card_text">Zure bazkide txartela ikusteko zure kontuarekin sartu behar duzu. Oraindik bazkidea ez bazara, beheko botoia sakatuz erregistratu zaitezke.</string>
     <string name="members_benefits">Bazkideentzako abantailak</string>
     <string name="change_image">Irudia aldatu</string>
-    <string name="error_image">Errorea gertatu da irudia igotzean</string>
+    <string name="error_image">Errorea gertatu da irudia igotzerakoan</string>
     <string name="benefits_available_for_active_members">Abantailak soilik bazkide aktiboentzat</string>
-    <string name="no_benefit_currently">Erakunde honek une honetan ez du abantailarik eskaintzen</string>
-    <string name="benefit_in_person">Pertsonalki</string>
+    <string name="no_benefit_currently">Erntitate honek une honetan ez du abantailarik eskaintzen</string>
+    <string name="benefit_in_person">Aurrez aurre</string>
     <string name="benefit_online">Online</string>
-    <string name="benefits_not_for_intercoop">Abantaila ez dago erabilgarri interkooperazio bazkideentzat</string>
+    <string name="benefits_not_for_intercoop">Abantail hau ez dago erabilgarri interkooperazio bazkideentzat</string>
     <string name="benefit_request_email_subject">Merkatu Sozialeko abantaila edo deskontu eskaera. Bazkide zenbakia: %s</string>
     <string name="benefit_code_x">Abantaila/deskontu kodea: %s</string>
     <string name="member_number">Bazkide zenbakia: %s</string>
@@ -122,7 +111,7 @@
     <string name="member_entity">Hornitzaile bazkidea</string>
     <string name="inactive">INAKTIBOA</string>
     <string name="active">AKTIBOA</string>
-    <string name="member_card_intro_message">Txartel honek zure Merkatu Sozialeko bazkide izatea egiaztatzen du. Harekin sareko abantaila eta deskontuetara sartzeko aukera izango duzu. Eskerrik asko Ekonomia Solidarioan zure ekarpenagatik!</string>
+    <string name="member_card_intro_message">Karnet honek Merkatu Sozialeko bazkide zarela ziurtatzen du. Sareari dagozkion abantailak eta deskontuak eskuratu ahal izango dituzu. Eskerrik asko Ekonomia Solidarioari egin diozun ekarpenagatik!</string>
     <string name="currently_inactive_member">Bazkidea INAKTIBOA</string>
     <string name="enter_member_id">Sartu bazkide zenbakia</string>
     <string name="member_id_not_found">Ez da bazkide zenbakia aurkitu</string>
@@ -130,17 +119,14 @@
     <string name="member_status_x">Bazkidea %s</string>
     <string name="member_id_x">Bazkide zenbakia: %s</string>
     <string name="not_logged_member_check_message">Erregistratutako erakundeek bakarrik egiaztatu dezakete bazkide baten egoera</string>
-
     <string name="mes_check_member">Bazkidea egiaztatu</string>
     <string name="with_benefits">Bazkideentzako abantailekin</string>
     <string name="where_to_consume">Non kontsumitu dezakezu</string>
-    <string name="distintivo_info">Ikur honek erakunde honen gardentasuna eta Ekonomia Sozial eta Solidarioaren balioekin duen konpromisoa adierazten du. Sakatu "bere bihotza ikusteko".</string>
+    <string name="distintivo_info">Ikur honek erakunde honen gardentasuna eta Ekonomia Sozial eta Solidarioaren balioekin duen konpromisoa adierazten du. Sakatu \"bere bihotza ikusteko\".</string>
     <string name="with_badge">Ikurrarekin</string>
-
     <string name="notifications_permission_rationale_msg">Android bertsio 13tik aurrera, erabiltzaileak jasotako jakinarazpenak aukeratzeko aukera du. Merkatu Sozialeko albisteen berri izan nahi baduzu, onartu baimena ;)</string>
     <string name="notifications_permission">Jakinarazpenen baimena</string>
-    <string name="error_no_member_data_found">Errorea. Ez da bazkidearen informaziorik aurkitu</string>
-
+    <string name="error_no_member_data_found">Akatsa. Ez da bazkidearen informaziorik aurkitu</string>
     <string name="fediverse">Fedibertsoa</string>
     <string name="social_market">Merkatu Soziala: %s</string>
     <string name="delete_account">Kontua ezabatu</string>
@@ -148,12 +134,12 @@
     <string name="send_leave_request">Baja eskaera bidali</string>
     <string name="delete_account_info">Zure kontua gure datu-baseetatik ezabatu nahi baduzu, idatzi iezaguzu mezu bat beheko botoia sakatuz eta ahalik eta lasterren erantzungo dizugu prozesua osatzeko.</string>
     <string name="open_email">Emaila ireki</string>
-    <string name="request_invitation_header">Zure erakundearekin argitalpenak egin eta pantaila honetan agertu nahi dituzu?</string>
+    <string name="request_invitation_header">Gustatuko litzaizuke zure entitatearekin argitalpenak egitea eta pantaila honetan agertzea?</string>
     <string name="request_invitation_body">Oraindik Fedibertsoan konturik ez baduzu, sakatu hurrengo botoia gonbidapena eskatzeko:</string>
     <string name="request_invitation_btn">Eskatu gonbidapena</string>
-    <string name="fediverse_invite_url_not_found">Gaur egun ez dago gonbidapenik eskuragarri.</string>
-    <string name="select_market">Aukeratu sarbide nahi duzun merkatua</string>
-    <string name="change_image_temporarily_disabled">Telefono bidez irudia aldatzeko funtzioa laster erabilgarri egongo da.\nOrain webgunetik aldatu dezakezu. Sakatu hurrengo botoia:</string>
+    <string name="fediverse_invite_url_not_found">Orain ez dago gonbidapenik eskuragarri.</string>
+    <string name="select_market">Aukeratu zein merkatutara sartu nahi duzun</string>
+    <string name="change_image_temporarily_disabled">Telefonotik irudia aldatzeko funtzioa laster erabilgarri egongo da.\nOraingoz, webgunetik alda dezakezu. Sakatu hurrengo botoia:</string>
     <string name="go_to_web">Joan webgunera</string>
-    <string name="change_language">Aldatu hizkuntza</string>
+    <string name="change_language">Hizkuntza aldatu</string>
 </resources>
