--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="change_image_temporarily_disabled">La función de cambiar imagen desde el teléfono estará disponible pronto.\nDe momento puedes cambiarla desde la web. Pulsa el siguiente botón:</string>
     <string name="go_to_web">Ir a la web</string>
     <string name="change_language">Cambiar idioma</string>
+    <string name="products_and_services">Productos y servicios</string>
 </resources>
