- added semantic search - improved entity loading and sync - added category names in list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,10 @@
     <string name="remove_filter">Borrar filtro</string>
     <string name="intro_first_item">Bienvenida al Mercado Social. Imagen de introducción.</string>
     <string name="member_card_qr">Código QR de carné de socia</string>
+
+    <string name="semantic_search">Búsqueda semántica…</string>
+    <string name="search_result">Resultado de la búsqueda</string>
+    <string name="search_result_exact_match">Resultado por coincidencia exacta de la palabra buscada en el nombre, descripción o productos/servicios de la entidad</string>
+    <string name="search_result_similarity">Resultado por similitud semántica. Grado de aproximación %s</string>
+
 </resources>
