--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -166,4 +166,6 @@
     <string name="remove_filter">Iragazkia ezabatu</string>
     <string name="intro_first_item">Ongi etorri Merkatu Sozialera. Sarrerako irudia.</string>
     <string name="member_card_qr">Bazkide txartelaren QR kodea</string>
+
+    <string name="semantic_search">Bilaketa semantikoa…</string>
 </resources>
