--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,7 +182,7 @@
     <string name="intro_first_item">Bienvenida al Mercado Social. Imagen de introducción.</string>
     <string name="member_card_qr">Código QR de carné de socia</string>
 
-    <string name="semantic_search">Búsqueda semántica…</string>
+    <string name="semantic_search">Búsqueda semántica</string>
     <string name="search_result">Resultado de la búsqueda</string>
     <string name="search_result_exact_match">Resultado por coincidencia exacta de la palabra buscada en el nombre, descripción o productos/servicios de la entidad</string>
     <string name="search_result_similarity">Resultado por similitud semántica. Grado de aproximación: %s</string>
@@ -197,7 +197,6 @@
     <string name="user_guide">Guía de uso</string>
     <string name="open_source_repo">Repositorio de cógido</string>
     <string name="whats_new">Novedades de la versión</string>
-    <string name="changes_4_6_8">- Búsqueda semántica de entidades por productos o servicios (para más información abre el filtro en el icono de la lupa)\n- Añadida información de categorías de entidades\n- Mejorada la velocidad en la carga de entidades</string>
     <string name="version_x">Versión: %s</string>
     <string name="whats_new_last_versions">Novedades en las últimas versiones</string>
     <string name="whats_new_current_version">Novedades en la versión actual</string>
